fix: scrollbar messes up text initialization in UI

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -31,3 +31,7 @@ html {
     color: #007bff !important;
     background-color: inherit !important;
 }
+
+.force-scrollbar {
+    overflow-y: scroll;
+}
